Started Expanding by Adding Teams

--- a/OOPPrototype_Basketball/OOPPrototype_Basketball.csproj
+++ b/OOPPrototype_Basketball/OOPPrototype_Basketball.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Classes\PowerForward.cs" />
     <Compile Include="Classes\ShootingGuard.cs" />
     <Compile Include="Classes\SmallForward.cs" />
+    <Compile Include="Classes\Team.cs" />
+    <Compile Include="Enums\Enums.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
