--- a/OOPPrototype_Fps/OOPPrototype_Fps.csproj
+++ b/OOPPrototype_Fps/OOPPrototype_Fps.csproj
@@ -46,14 +46,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\MachineGun.cs" />
+    <Compile Include="Classes\Pistol.cs" />
+    <Compile Include="Classes\Shotgun.cs" />
+    <Compile Include="Classes\Sniper.cs" />
+    <Compile Include="Classes\Soldiers.cs" />
+    <Compile Include="Classes\Weapons.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IBurstDamage.cs" />
+    <Compile Include="Interfaces\IMachineGun.cs" />
+    <Compile Include="Interfaces\IScoped.cs" />
+    <Compile Include="Interfaces\ISuppressed.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,5 +89,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
