--- a/OOPPrototype_Football/OOPPrototype_Football.csproj
+++ b/OOPPrototype_Football/OOPPrototype_Football.csproj
@@ -46,12 +46,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\GoalKeeper.cs" />
+    <Compile Include="Classes\Player.cs" />
+    <Compile Include="Classes\Team.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IDefense.cs" />
+    <Compile Include="Interfaces\IForward.cs" />
+    <Compile Include="Interfaces\IGameMaker.cs" />
+    <Compile Include="Interfaces\IGoalKeeper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -76,5 +83,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
