--- a/OOPPrototype_Football/OOPPrototype_Football.csproj
+++ b/OOPPrototype_Football/OOPPrototype_Football.csproj
@@ -46,8 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Defender.cs" />
     <Compile Include="Classes\GoalKeeper.cs" />
+    <Compile Include="Classes\MidFielder.cs" />
     <Compile Include="Classes\Player.cs" />
+    <Compile Include="Classes\Striker.cs" />
     <Compile Include="Classes\Team.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -61,6 +64,9 @@
     <Compile Include="Interfaces\IGoalKeeper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
