Finished Moba OOP Project

--- a/OOPPrototype_Moba/OOPPrototype_Moba.csproj
+++ b/OOPPrototype_Moba/OOPPrototype_Moba.csproj
@@ -46,15 +46,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Classes\Character.cs" />
+    <Compile Include="Classes\Jungle.cs" />
+    <Compile Include="Classes\MidLane.cs" />
+    <Compile Include="Classes\OffLane.cs" />
+    <Compile Include="Classes\SafeCarry.cs" />
+    <Compile Include="Classes\Support.cs" />
+    <Compile Include="Interfaces\IFarmer.cs" />
+    <Compile Include="Interfaces\ISupport.cs" />
+    <Compile Include="System\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="System\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="System\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="System\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -77,7 +85,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="System\App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
