--- a/DelegatesAndEventsPractice/DelegatesAndEventsPractice.csproj
+++ b/DelegatesAndEventsPractice/DelegatesAndEventsPractice.csproj
@@ -43,11 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Delegates\DelegatesIntro.cs" />
+    <Compile Include="Delegates\ShootingGameExample.cs" />
+    <Compile Include="Events\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
